--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -73,7 +73,9 @@ else
 
             BU::ModuleInit::AskPrintLog;
 
-            exit 1;
+            BU::IsInScript && exit 1;
+
+			return 1;
         fi
 
     # Checking if the "Bash-utils-root-val.path" exists AND if this file is empty (no library's path specified).
@@ -87,7 +89,9 @@ else
 
         BU::ModuleInit::AskPrintLog;
 
-        exit 1;
+        BU::IsInScript && exit 1;
+
+		return 1;
 
     # Checking if the current user cannot read the "Bash-utils-root-val.path" (file owned by the "root" user).
     elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -r "$__BU_MODULES_UTILS_LIB_ROOT_DIR_FILE_PATH" ]; then
@@ -103,7 +107,9 @@ else
 
         BU::ModuleInit::AskPrintLog;
 
-        exit 1;
+        BU::IsInScript && exit 1;
+
+		return 1;
 
     # Handling the absence of the "Bash-utils-root-val.path" file.
     elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
@@ -116,7 +122,9 @@ else
 
         BU::ModuleInit::AskPrintLog;
 
-        exit 1;
+        BU::IsInScript && exit 1;
+
+		return 1;
     fi
 fi
 
