--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -29,6 +29,9 @@ function BU::Main::ModConfig::Text::PrintResetCmdSubs() { printf "This command s
 # Writing the command substitution text when a total resetting is defined.
 function BU::Main::ModConfig::Text::PrintAllResetCmdSubs() { printf "This command substitution executes the « BU::Main::Checkings::CheckTextFormat() » function in order to reset the text from the every text formatting"; }
 
+# Writing the name of the variable that could not be initialized with it's command substitution.
+function BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize() { printf "The « %s » text global variable cannot be initialized because of a problem happening during the call of the associated command substitution" "$2" "$3" "$1"; }
+
 # -----------------------------------------------
 
 
@@ -87,55 +90,55 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAG
 function BU::Main::ModConfig::Text::WrapTextFormattingSubSection()
 {
     # Blink
-    __BU_MAIN_TXT_FMT_BLINK="$(BU::Main::Checkings::CheckTextFormat 'blink' '5';)"; || return 1;
-    __BU_MAIN_TXT_FMT_BLINK_RESET="$(BU::Main::Checkings::CheckTextFormat 'sgr0' '25';)"; || return 1;
+    __BU_MAIN_TXT_FMT_BLINK="$(BU::Main::Checkings::CheckTextFormat			'blink'	'5'		'--no-function';)"	|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK'			"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
+    __BU_MAIN_TXT_FMT_BLINK_RESET="$(BU::Main::Checkings::CheckTextFormat	'sgr0'	'25'	'--no-function';)"	|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK_RESET'	"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
 
     printf "%s" "$__BU_MAIN_TXT_FMT_BLINK";         BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BLINK'        "$__BU_MAIN_TXT_FMT_BLINK"          'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "blink")"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
     printf "%s" "$__BU_MAIN_TXT_FMT_BLINK_RESET";   BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BLINK_RESET'  "$__BU_MAIN_TXT_FMT_BLINK_RESET"    'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "blink")"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
     # Bold
-    __BU_MAIN_TXT_FMT_BOLD="$(BU::Main::Checkings::CheckTextFormat 'bold' '1';)"; || return 1;
-    __BU_MAIN_TXT_FMT_BOLD_RESET="$(BU::Main::Checkings::CheckTextFormat '' '0';)"; || return 1;
+    __BU_MAIN_TXT_FMT_BOLD="$(BU::Main::Checkings::CheckTextFormat			'bold'	'1' '--no-function';)" 		|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD'		"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
+    __BU_MAIN_TXT_FMT_BOLD_RESET="$(BU::Main::Checkings::CheckTextFormat	''		'0' '--no-function';)" 		|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD_RESET'	"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
 
     printf "%s" "$__BU_MAIN_TXT_FMT_BOLD";          BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BOLD'         "$__BU_MAIN_TXT_FMT_BOLD"           'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "bold")" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
     printf "%s" "$__BU_MAIN_TXT_FMT_BOLD_RESET";    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_BOLD_RESET'   "$__BU_MAIN_TXT_FMT_BOLD_RESET"     'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "bold")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
     # Dim
-    __BU_MAIN_TXT_FMT_DIM="$(BU::Main::Checkings::CheckTextFormat 'dim' '2';)"; || return 1;
-    __BU_MAIN_TXT_FMT_DIM_RESET="$(BU::Main::Checkings::CheckTextFormat '' '22';)"; || return 1;
+    __BU_MAIN_TXT_FMT_DIM="$(BU::Main::Checkings::CheckTextFormat		'dim'	'2'		'--no-function';)"		|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM'		"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
+    __BU_MAIN_TXT_FMT_DIM_RESET="$(BU::Main::Checkings::CheckTextFormat ''		'22'	'--no-function';)"		|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM_RESET'	"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
 
     printf "%s" "$__BU_MAIN_TXT_FMT_DIM";           BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_DIM'              "$__BU_MAIN_TXT_FMT_DIM"        'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "dim")"  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
     printf "%s" "$__BU_MAIN_TXT_FMT_DIM_RESET";     BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_DIM_RESET'        "$__BU_MAIN_TXT_FMT_DIM_RESET"  'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "dim")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
     # Hidden (useful for password typing).
-    __BU_MAIN_TXT_FMT_HIDDEN="$(BU::Main::Checkings::CheckTextFormat '' '8';)"; || return 1;
-    __BU_MAIN_TXT_FMT_HIDDEN_RESET="$(BU::Main::Checkings::CheckTextFormat '' '28';)"; || return 1;
+    __BU_MAIN_TXT_FMT_HIDDEN="$(BU::Main::Checkings::CheckTextFormat		'' '8'	'--no-function';)"			|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN'		"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
+    __BU_MAIN_TXT_FMT_HIDDEN_RESET="$(BU::Main::Checkings::CheckTextFormat	'' '28'	'--no-function';)"			|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN_RESET'	"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
 
     printf "%s" "$__BU_MAIN_TXT_FMT_HIDDEN";        BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_HIDDEN'       "$__BU_MAIN_TXT_FMT_HIDDEN"         'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "hidden")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
     printf "%s" "$__BU_MAIN_TXT_FMT_HIDDEN_RESET";  BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_HIDDEN_RESET' "$__BU_MAIN_TXT_FMT_HIDDEN_RESET"   'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "hidden")"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
     # Italic
-    __BU_MAIN_TXT_FMT_ITALIC="$(BU::Main::Checkings::CheckTextFormat 'sitm' '3';)"; || return 1;
-    __BU_MAIN_TXT_FMT_ITALIC_RESET="$(BU::Main::Checkings::CheckTextFormat 'ritm' '23';)"; || return 1;
+    __BU_MAIN_TXT_FMT_ITALIC="$(BU::Main::Checkings::CheckTextFormat		'sitm' '3'	'--no-function';)"		|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC'		"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
+    __BU_MAIN_TXT_FMT_ITALIC_RESET="$(BU::Main::Checkings::CheckTextFormat	'ritm' '23'	'--no-function';)"		|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC_RESET'	"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
 
     printf "%s" "$__BU_MAIN_TXT_FMT_ITALIC";        BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_ITALIC'       "$__BU_MAIN_TXT_FMT_ITALIC"         'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "italic")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
     printf "%s" "$__BU_MAIN_TXT_FMT_ITALIC_RESET";  BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_ITALIC_RESET' "$__BU_MAIN_TXT_FMT_ITALIC_RESET"   'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "italic")"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
     # Reset
-    __BU_MAIN_TXT_FMT_RESET="$(BU::Main::Checkings::CheckTextFormat 'sgr0' '0';)"; || return 1;
+    __BU_MAIN_TXT_FMT_RESET="$(BU::Main::Checkings::CheckTextFormat			'sgr0' '0' '--no-function';)"		|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_RESET' "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
 
     printf "%s" "$__BU_MAIN_TXT_FMT_RESET"; BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_RESET' "$__BU_MAIN_TXT_FMT_RESET" 'CMD' "$(BU::Main::ModConfig::Text::PrintAllResetCmdSubs)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
     # Strikethrough
-    __BU_MAIN_TXT_FMT_STRIKETHROUGH="$(BU::Main::Checkings::CheckTextFormat '' '9';)"; || return 1;
-    __BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(BU::Main::Checkings::CheckTextFormat '' '29';)"; || return 1;
+    __BU_MAIN_TXT_FMT_STRIKETHROUGH="$(BU::Main::Checkings::CheckTextFormat			'' '9'	'--no-function';)"	|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH'			"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
+    __BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(BU::Main::Checkings::CheckTextFormat	'' '29'	'--no-function';)"	|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET'	"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
 
     printf "%s" "$__BU_MAIN_TXT_FMT_STRIKETHROUGH";         BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_STRIKETHROUGH'        "$__BU_MAIN_TXT_FMT_STRIKETHROUGH"          'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "strikethrough")"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
     printf "%s" "$__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET";   BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET'  "$__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET"    'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "strikethrough")"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
     # Underline
-    __BU_MAIN_TXT_FMT_UNDERLINE="$(BU::Main::Checkings::CheckTextFormat 'smul' '4';)"; || return 1;
-    __BU_MAIN_TXT_FMT_UNDERLINE_RESET="$(BU::Main::Checkings::CheckTextFormat 'rmul' '24';)"; || return 1;
+    __BU_MAIN_TXT_FMT_UNDERLINE="$(BU::Main::Checkings::CheckTextFormat			'smul' '4'	'--no-function';)"	|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE'			"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
+    __BU_MAIN_TXT_FMT_UNDERLINE_RESET="$(BU::Main::Checkings::CheckTextFormat	'rmul' '24'	'--no-function';)"	|| { printf "%s\n" ""; BU::Main::ModConfig::Text::PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE_RESET'	"$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };
 
     printf "%s" "$__BU_MAIN_TXT_FMT_UNDERLINE";         BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_UNDERLINE'        "$__BU_MAIN_TXT_FMT_UNDERLINE"          'CMD' "$(BU::Main::ModConfig::Text::PrintFormatCmdSubs "Underline")"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
     printf "%s" "$__BU_MAIN_TXT_FMT_UNDERLINE_RESET";   BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_FMT_UNDERLINE_RESET'  "$__BU_MAIN_TXT_FMT_UNDERLINE_RESET"    'CMD' "$(BU::Main::ModConfig::Text::PrintResetCmdSubs "Underline")"     "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
