--- a/install/.Bash-utils/config/modules/main/debug.conf
+++ b/install/.Bash-utils/config/modules/main/debug.conf
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-# Debug function that displays function and file name.
+# Debug function that displays function and file name (not used in the script and deprecated).
 function debug()
 {
 	#**** Parameters ****
