Improving the initialization process

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -24,90 +24,114 @@ if [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'false' ]; then
     __BU_MODULE_INIT_STAT_DEBUG_BASHX="";
 
 elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
-    # shellcheck disable=SC2034
-    __BU_MODULE_INIT_STAT_DEBUG_BASHX="file";
 
-    # Add or remove any supported values inside these arrays.
+    # ------------------------------------------------------
+    # Add or remove any supported values inside these arrays
+    # ------------------------------------------------------
 
-    # ------------------------------
+    # -------------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT
+    # -------------------------------------
 
-    # Each accepted value is written under each category name, in each library file.
-    # The "All" value can be used as index 0, in order to allow printing the name of every functions from every categores.
+    if [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = "category" ] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" = 'C' ]; then
 
-    # Every values are case-insensitive.
+        # Each accepted value is written under each category name, in each library file.
+        # The "All" value can be used as index 0, in order to allow printing the name of every functions from every categores.
 
-    BashXCatConf="BashXCat.conf";
+        # Every values are case-insensitive.
 
-    # If the "" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-    if [ -f "$BashXCatConf" ] && [ -n "$BashXCatConf" ]; then
-        __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
+        BashXCatConf="BashXCat.conf";
 
-        cat "$BashXCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT+=("$line"); done
+        # If the "" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
+        if [ -f "$BashXCatConf" ] && [ -n "$BashXCatConf" ]; then
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
 
-    # Else, you can fill the following array with values.
-    else
-        __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
-    fi
+            cat "$BashXCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT+=("$line"); done
 
-    # ---------------------------------------
+        # Else, you can fill the following array with values.
+        else
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
+        fi
+
+        # Unsetting the created variable, in order to free the memory from a now userless variable.
+        unset BashXCatConf;
+
+    # ---------------------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY
+    # ---------------------------------------------
+    
+    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == file?(s) ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" = 'F' ]; then
 
-    # The accepted values are the name of every ".lib" files from the Bash-utils/lib/functions/main/ directory.
-    # The "All" value can be used as index 0, in order to allow printing the name of every functions from every files.
+        # The accepted values are the name of every ".lib" files from the Bash-utils/lib/functions/main/ directory.
+        # The "All" value can be used as index 0, in order to allow printing the name of every functions from every files.
 
-    # Every values are case-insensitive.
+        # Every values are case-insensitive.
 
-    BashXFilesConf="BashXFiles.conf";
+        BashXFilesConf="BashXFiles.conf";
 
-    # If the "BashXFiles.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-    if [ -f "$BashXFilesConf" ] && [ -n "$BashXFilesConf" ]; then
-        __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
+        # If the "BashXFiles.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
+        if [ -f "$BashXFilesConf" ] && [ -n "$BashXFilesConf" ]; then
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
 
-        cat "$BashXFilesConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY+=("$line"); done
+            cat "$BashXFilesConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY+=("$line"); done
 
-    # Else, you can fill the following array with values.
-    else
-        __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=("Args" "Decho" "Files" "Directories" "Status");
-    fi
+        # Else, you can fill the following array with values.
+        else
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=("Args" "Decho" "Files" "Directories" "Status");
+        fi
 
-    # ------------------------------
+        # Unsetting the created variable, in order to free the memory from a now userless variable.
+        unset BashXFilesConf;
+
+    # -------------------------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY
+    # -------------------------------------------------
 
-    # The accepted values are the name of each function you want to debug.
-    # The "All" value can be used as index 0, in order to allow printing the name of every functions from every files.
+    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = function?(s) ]] || [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" = FNCT?(S) ]]; then
 
-    # Every values are case-insensitive.
+        # The accepted values are the name of each function you want to debug.
+        # The "All" value can be used as index 0, in order to allow printing the name of every functions from every files.
 
-    BashXFNCTConf="BashXFNCT.conf";
+        # Every values are case-insensitive.
 
-    # If the "BashXFNCT.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-    if [ -f "$BashXFNCTConf" ] && [ -n "$BashXFNCTConf" ]; then
-        __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
+        BashXFNCTConf="BashXFNCT.conf";
 
-        cat "$BashXFNCTConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY+=("$line"); done
+        # If the "BashXFNCT.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
+        if [ -f "$BashXFNCTConf" ] && [ -n "$BashXFNCTConf" ]; then
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
 
-    # Else, you can fill the following array with values.
-    else
-        __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY=("Args" "Decho");
-    fi
+            cat "$BashXFNCTConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY+=("$line"); done
 
-    # ----------------------------------
+        # Else, you can fill the following array with values.
+        else
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY=("Args" "Decho");
+        fi
+
+        # Unsetting the created variable, in order to free the memory from a now userless variable.
+        unset BashXFNCTConf;
+
+    # -----------------------------------------
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT
+    # -----------------------------------------
 
-    # Each accepted value is written under each sub-category name, in each library file, and named according to their parent category.
-    # The "All" value can be used as index 0, in order to allow printing the name of every functions from every sub-categories.
+    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = sub?(-)category ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" = 'S' ]; then
+        # Each accepted value is written under each sub-category name, in each library file, and named according to their parent category.
+        # The "All" value can be used as index 0, in order to allow printing the name of every functions from every sub-categories.
 
-    # Every values are case-insensitive.
+        # Every values are case-insensitive.
 
-    BashXSubCatConf="BashXSubCat.conf";
+        BashXSubCatConf="BashXSubCat.conf";
 
-    # If the "BashXSubCat.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-    if [ -f "$BashXSubCatConf" ] && [ -n "$BashXSubCatConf" ]; then
-        __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
+        # If the "BashXSubCat.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
+        if [ -f "$BashXSubCatConf" ] && [ -n "$BashXSubCatConf" ]; then
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
 
-        cat "$BashXSubCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT+=("$line"); done
-    else
-        __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
+            cat "$BashXSubCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT+=("$line"); done
+        else
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
+        fi
+
+        # Unsetting the created variable, in order to free the memory from a now userless variable.
+        unset BashXSubCatConf;
     fi
 fi
