--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -43,7 +43,7 @@ v_time_conf_date_display_color_1="78";
 v_time_conf_date_display_color_2="111";
 v_time_conf_date_display_color_3="78";
 
-# __BU_MAIN_TIME_DATE_DISPLAY="$(printf "\e[38;5;%sm[ \e[38;5;%sm%s\e[38;5;%sm ]\e[38;5;0m" \
+__BU_MAIN_TIME_DATE_DISPLAY="$(printf "\e[38;5;%sm[ \e[38;5;%sm%s\e[38;5;%sm ]\e[38;5;0m" \
 #     "$(tput setaf "$v_time_conf_date_display_color_1")" \
 #     "$(tput setaf "$v_time_conf_date_display_color_2")" \
 #     "$__BU_MAIN_TIME_DATE" \
