The checking of the '--stat-debug-bashx' option works

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -33,7 +33,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT
     # -------------------------------------
 
-    if [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = "category" ] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" = 'C' ]; then
+    if [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = cat?(eg?(ory)) ]] || [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" == cat?(eg?(orie))s ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" = 'C' ]; then
 
         # Each accepted value is written under each category name, in each library file.
         # The "All" value can be used as index 0, in order to allow printing the name of every functions from every categores.
@@ -114,7 +114,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT
     # -----------------------------------------
 
-    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = sub?(-)category ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" = 'S' ]; then
+    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = sub?(-)cat?(eg?(ory)) ]] || [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = s?(ub)?(-)cat?(eg?(orie))s ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" = 'S' ]; then
         # Each accepted value is written under each sub-category name, in each library file, and named according to their parent category.
         # The "All" value can be used as index 0, in order to allow printing the name of every functions from every sub-categories.
 
