Corrected some typing errors

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -53,7 +53,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
         fi
 
-        # Unsetting the created variable, in order to free the memory from a now userless variable.
+        # Unsetting the created variable, in order to free the memory from a now useless variable.
         unset BashXCatConf;
 
     # ---------------------------------------------
@@ -80,7 +80,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=("Args" "Decho" "Files" "Directories" "Status");
         fi
 
-        # Unsetting the created variable, in order to free the memory from a now userless variable.
+        # Unsetting the created variable, in order to free the memory from a now useless variable.
         unset BashXFilesConf;
 
     # -------------------------------------------------
@@ -107,7 +107,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY=("Args" "Decho");
         fi
 
-        # Unsetting the created variable, in order to free the memory from a now userless variable.
+        # Unsetting the created variable, in order to free the memory from a now useless variable.
         unset BashXFNCTConf;
 
     # -----------------------------------------
@@ -131,7 +131,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
         fi
 
-        # Unsetting the created variable, in order to free the memory from a now userless variable.
+        # Unsetting the created variable, in order to free the memory from a now useless variable.
         unset BashXSubCatConf;
     fi
 fi
