Adding translated messages

--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -43,7 +43,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
         BashXCatConf="BashXCat.conf";
 
         # If the "" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-        if [ -f "$BashXCatConf" ] && [ -n "$BashXCatConf" ]; then
+        if [ -f "$BashXCatConf" ] && [ -s "$BashXCatConf" ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT=();
 
             cat "$BashXCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_CAT+=("$line"); done
@@ -70,7 +70,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
         BashXFilesConf="BashXFiles.conf";
 
         # If the "BashXFiles.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-        if [ -f "$BashXFilesConf" ] && [ -n "$BashXFilesConf" ]; then
+        if [ -f "$BashXFilesConf" ] && [ -s "$BashXFilesConf" ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
 
             cat "$BashXFilesConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY+=("$line"); done
@@ -97,7 +97,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
         BashXFNCTConf="BashXFNCT.conf";
 
         # If the "BashXFNCT.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-        if [ -f "$BashXFNCTConf" ] && [ -n "$BashXFNCTConf" ]; then
+        if [ -f "$BashXFNCTConf" ] && [ -s "$BashXFNCTConf" ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_FILES_ARRAY=();
 
             cat "$BashXFNCTConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY+=("$line"); done
@@ -123,7 +123,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
         BashXSubCatConf="BashXSubCat.conf";
 
         # If the "BashXSubCat.conf" file exists in the SAME directory than this script AND is not empty, then it's content is read, and each line is stored as a single value in each index.
-        if [ -f "$BashXSubCatConf" ] && [ -n "$BashXSubCatConf" ]; then
+        if [ -f "$BashXSubCatConf" ] && [ -s "$BashXSubCatConf" ]; then
             __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT=();
 
             cat "$BashXSubCatConf" | while read -r line; do __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT+=("$line"); done
