--- a/install/.Bash-utils/config/initializer/Status.conf
+++ b/install/.Bash-utils/config/initializer/Status.conf
@@ -104,7 +104,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
 
         # Else, you can fill the following array with values.
         else
-            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY=("Args" "Decho");
+            __BU_MODULE_INIT_STAT_DEBUG_BASHX_FUNCTIONS_ARRAY=("Args" "Decho" "Errors");
         fi
 
         # Unsetting the created variable, in order to free the memory from a now useless variable.
@@ -114,7 +114,7 @@ elif [ "$__BU_MODULE_INIT_STAT_DEBUG" = 'true' ]; then
     # __BU_MODULE_INIT_STAT_DEBUG_BASHX_SUB_CAT
     # -----------------------------------------
 
-    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = sub?(-)cat?(eg?(ory)) ]] || [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = s?(ub)?(-)cat?(eg?(orie))s ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" = 'S' ]; then
+    elif [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = s?(ub)?(-)c?(at?(eg?(ory))) ]] || [[ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX,,}" = s?(ub)?(-)?(c?(at?(eg?(orie))))s ]] || [ "${__BU_MODULE_INIT_STAT_DEBUG_BASHX^^}" = 'S' ]; then
         # Each accepted value is written under each sub-category name, in each library file, and named according to their parent category.
         # The "All" value can be used as index 0, in order to allow printing the name of every functions from every sub-categories.
 
