Adding support for other names to the module.conf and initializer.sh files, and added a 'Status.conf' file for the 'Software' module

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -15,7 +15,7 @@
 # Default value : "forbid" (to avoid bugs during the program's initialization)
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_DECHO="forbid"
+__BU_MAIN_STAT_DECHO="forbid";
 
 
 # "BU::Main::Checkings::CheckProjectLogPath()" function's authorization to call an "BU::Echo<...>()" function in case of need.
@@ -24,7 +24,7 @@ __BU_MAIN_STAT_DECHO="forbid"
 # Default value : "true" (to avoid bugs and infinite loops during the initialization processus)
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_ECHO="true"
+__BU_MAIN_STAT_ECHO="true";
 
 
 # Project's error handling
@@ -33,7 +33,7 @@ __BU_MAIN_STAT_ECHO="true"
 # Default value : "fatal" (to avoid leaving bugs during the program's initialization)
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_ERROR="fatal"
+__BU_MAIN_STAT_ERROR="fatal";
 
 
 # Project's initialization status checker.
@@ -42,7 +42,7 @@ __BU_MAIN_STAT_ERROR="fatal"
 # Default value : "true" (DON'T change thsi value here, since the project MUST be initialized first).
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_INITIALIZING="true"
+__BU_MAIN_STAT_INITIALIZING="true";
 
 
 # Project's main log file informations
@@ -51,7 +51,7 @@ __BU_MAIN_STAT_INITIALIZING="true"
 # Default value : "true"
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_LOG="true"
+__BU_MAIN_STAT_LOG="true";
 
 
 # Project's main log file redirections status.
@@ -60,7 +60,7 @@ __BU_MAIN_STAT_LOG="true"
 # Default value : "" (no value)
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_LOG_REDIRECT=""
+__BU_MAIN_STAT_LOG_REDIRECT="";
 
 
 # Project's authorization to operate at the root directory or one of its sub-folders.
@@ -69,7 +69,7 @@ __BU_MAIN_STAT_LOG_REDIRECT=""
 # Default value : "forbidden" (by security, and since there's no need to change its value during the initialization, you have to change this value manually or in your code with the "BU::Main::Status::ChangeSTAT_OPERATE_ROOT()" function).
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_OPERATE_ROOT="forbidden"
+__BU_MAIN_STAT_OPERATE_ROOT="forbidden";
 
 
 # Project's headers messages display pause time.
@@ -78,7 +78,7 @@ __BU_MAIN_STAT_OPERATE_ROOT="forbidden"
 # Default value : ".6"
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_TIME_HEADER="1"
+__BU_MAIN_STAT_TIME_HEADER="1";
 
 
 # Project's newlines pause time.
@@ -86,7 +86,7 @@ __BU_MAIN_STAT_TIME_HEADER="1"
 # This variable only accepts any integer of floating number.
 # Default value ".2"
 
-__BU_MAIN_STAT_TIME_NEWLINE=".2"
+__BU_MAIN_STAT_TIME_NEWLINE=".2";
 
 
 # Project's text messages display pause time.
@@ -95,7 +95,7 @@ __BU_MAIN_STAT_TIME_NEWLINE=".2"
 # Default value : ".4"
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_TIME_TXT=".4"
+__BU_MAIN_STAT_TIME_TXT=".4";
 
 
 # Project's text formatting handling (the "BU::Decho<...>()" functions can format the text or not).
@@ -104,13 +104,4 @@ __BU_MAIN_STAT_TIME_TXT=".4"
 # Default value : "true" (formatting accepted)
 
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_TXT_FMT="true"
-
-
-# User's operating system (getting user's OS is important for OS-dependent processings, like package management)
-
-# This variable will be completed with the "CheckSupportedOSType" function.
-# Default value : "" (no value)
-
-# shellcheck disable=SC2034
-__BU_MAIN_STAT_USER_OS=""
+__BU_MAIN_STAT_TXT_FMT="true";
